tests/NormalTests/paczka1/fuzzy1/84734325.err
Error in line 6: uvvHyX7 S34 18,7
Error in line 4: 232yl S34 23,9
Error in line 5: i6oYgeg A940 4,5
